--- a/workflow-ui-test/pom.xml
+++ b/workflow-ui-test/pom.xml
@@ -1,15 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ch.ivyteam.ivy.project.workflow</groupId>
+
+  <parent>
+    <groupId>ch.ivyteam.workflow</groupId>
+    <artifactId>workflow-ui-config</artifactId>
+    <version>${revision}</version>
+    <relativePath>../maven-config</relativePath>
+  </parent>
+
+  <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>workflow-ui-test</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <packaging>iar</packaging>
+
   <dependencies>
     <dependency>
-      <groupId>ch.ivyteam.ivy.project.workflow</groupId>
+      <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>workflow-ui</artifactId>
-      <version>[1.0.0-SNAPSHOT,)</version>
+      <version>${revision}</version>
       <type>iar</type>
     </dependency>
     <dependency>
@@ -25,7 +34,6 @@
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
-        <version>9.1.0</version>
         <extensions>true</extensions>
       </plugin>
     </plugins>
