--- a/workflow-ui-web-test/pom.xml
+++ b/workflow-ui-web-test/pom.xml
@@ -1,33 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
+  xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>ch.ivyteam.ivy.project.workflow</groupId>
+
+  <parent>
+    <groupId>ch.ivyteam.workflow</groupId>
+    <artifactId>workflow-ui-config-test</artifactId>
+    <version>${revision}</version>
+    <relativePath>../maven-config/test</relativePath>
+  </parent>
+
+  <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>workflow-ui-web-test</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
   <packaging>iar-integration-test</packaging>
+
+  <properties>
+    <test.application>workflowuiwebtest</test.application>
+  </properties>
+
   <dependencies>
-    <dependency>
-      <groupId>ch.ivyteam.ivy.project.workflow</groupId>
-      <artifactId>workflow-ui</artifactId>
-      <version>[1.0.0-SNAPSHOT,)</version>
-      <type>iar</type>
-    </dependency>
     <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
       <artifactId>web-tester</artifactId>
-      <version>9.1.0</version>
+      <version>9.1.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>central.snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <updatePolicy>always</updatePolicy>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <build>
     <testSourceDirectory>src_test</testSourceDirectory>
-    <plugins>
-      <plugin>
-        <groupId>com.axonivy.ivy.ci</groupId>
-        <artifactId>project-build-plugin</artifactId>
-        <version>9.1.0</version>
-        <extensions>true</extensions>
-      </plugin>
-    </plugins>
+    <testOutputDirectory>target/test-classes</testOutputDirectory>
   </build>
 </project>
