XIVYWF-2 Rename test name and package, add screenshot verifying

--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -47,8 +47,28 @@
             <!-- unnecessary suppress warnings: false positives off -->
             <compilerOption>-warn:-warningToken</compilerOption>
           </compilerOptions>
-          <osArchitecture>All_x64</osArchitecture>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>${flatten.plugin.version}</version>
+        <executions>
+          <execution>
+            <id>flatten</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>flatten</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>flatten.clean</id>
+            <phase>clean</phase>
+            <goals>
+              <goal>clean</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
 
