--- a/workflow-ui/pom.xml
+++ b/workflow-ui/pom.xml
@@ -7,7 +7,7 @@
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>workflow-ui-config</artifactId>
     <version>${revision}</version>
-    <relativePath>../maven-config</relativePath>
+    <relativePath>../maven/config</relativePath>
   </parent>
 
   <groupId>ch.ivyteam.workflow</groupId>
