XIVYWF-15 add task details

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
     <module>workflow-ui</module>
     <module>workflow-ui-test</module>
     <module>workflow-ui-web-test</module>
+    <module>workflow-ui-test-data</module>
   </modules>
 
   <build>
