--- a/workflow-ui-web-test/pom.xml
+++ b/workflow-ui-web-test/pom.xml
@@ -22,6 +22,12 @@
       <type>iar</type>
     </dependency>
     <dependency>
+      <groupId>ch.ivyteam.workflow</groupId>
+      <artifactId>workflow-ui-test-data</artifactId>
+      <version>${revision}</version>
+      <type>iar</type>
+    </dependency>
+    <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
       <artifactId>web-tester</artifactId>
       <version>9.1.1-SNAPSHOT</version>
