--- a/workflow-ui-test-data/.classpath
+++ b/workflow-ui-test-data/.classpath
@@ -25,11 +25,7 @@
       <attribute name="optional" value="true" />
     </attributes>
   </classpathentry>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-    <attributes>
-      <attribute name="module" value="true" />
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER" />
   <classpathentry exported="true" kind="con" path="IVY_CONTAINER" />
   <classpathentry kind="con" path="WEBAPP_CONTAINER" />
   <classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container" />
@@ -38,6 +34,5 @@
       <attribute name="maven.pomderived" value="true" />
     </attributes>
   </classpathentry>
-  <classpathentry kind="lib" path="lib/prettytime-3.2.7.Final.jar" />
   <classpathentry kind="output" path="classes" />
 </classpath>
