--- a/workflow-ui-test-data/.settings/ch.ivyteam.ivy.designer.prefs
+++ b/workflow-ui-test-data/.settings/ch.ivyteam.ivy.designer.prefs
@@ -1,4 +1,5 @@
-ch.ivyteam.ivy.designer.preferences.DataClassPreferencePage\:DEFAULT_DATA_CLASS=workflow.uite.Data
-ch.ivyteam.ivy.designer.preferences.DataClassPreferencePage\:DEFAULT_NAMESPACE=workflow.uite
+ch.ivyteam.ivy.designer.preferences.DataClassPreferencePage\:DEFAULT_DATA_CLASS=ch.ivyteam.ivy.project.workflow.Data
+ch.ivyteam.ivy.designer.preferences.DataClassPreferencePage\:DEFAULT_NAMESPACE=ch.ivyteam.ivy.project.workflow
+ch.ivyteam.ivy.designer.preferences.DataClassPreferencePage\:useProjectSettings=true
 ch.ivyteam.ivy.project.preferences\:PROJECT_VERSION=80000
 eclipse.preferences.version=1
