--- a/workflow-ui-web-test/pom.xml
+++ b/workflow-ui-web-test/pom.xml
@@ -14,6 +14,10 @@
   <artifactId>workflow-ui-web-test</artifactId>
   <packaging>iar-integration-test</packaging>
 
+  <properties>
+    <test.application>workflowuiwebtest</test.application>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
@@ -52,6 +56,37 @@
     <testSourceDirectory>src_test</testSourceDirectory>
     <testOutputDirectory>target/test-classes</testOutputDirectory>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven.surefire.version}</version>
+        <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
+        <executions>
+          <execution>
+            <id>default-test</id>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </execution>
+          <execution>
+            <id>selenium.web.docu</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <includes>
+                <include>**/WebDocu*.java</include>
+              </includes>
+              <argLine>
+                -Dtest.engine.url=${test.engine.url}
+                -Dtest.engine.app=${test.application}</argLine>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <groupId>com.axonivy.ivy.ci</groupId>
         <artifactId>project-build-plugin</artifactId>
