--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -10,6 +10,7 @@
     <revision>9.2.0-SNAPSHOT</revision>
     <flatten.plugin.version>1.2.5</flatten.plugin.version>
     <project.build.plugin.version>9.1.0</project.build.plugin.version>
+    <buildPlugin.ivyVersion>[9.2.0,]</buildPlugin.ivyVersion>
   </properties>
 
   <build>
