--- a/workflow-ui-web-test/pom.xml
+++ b/workflow-ui-web-test/pom.xml
@@ -37,6 +37,12 @@
       <version>9.1.1-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
+     <dependency>
+      <groupId>com.browserup</groupId>
+      <artifactId>browserup-proxy-core</artifactId>
+      <version>2.0.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <repositories>
