--- a/workflow-ui-web-test/pom.xml
+++ b/workflow-ui-web-test/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>com.axonivy.ivy.webtest</groupId>
       <artifactId>web-tester</artifactId>
-      <version>9.1.1-SNAPSHOT</version>
+      <version>9.2.0-SNAPSHOT</version>
       <scope>test</scope>
     </dependency>
      <dependency>
@@ -93,7 +93,7 @@
           </execution>
           <execution>
             <id>cleanup-test</id>
-            <phase>post-integration-test</phase>
+            <phase>integration-test</phase>
             <goals>
               <goal>test</goal>
             </goals>
