--- a/maven/deploy/pom.xml
+++ b/maven/deploy/pom.xml
@@ -18,8 +18,44 @@
     <deployApplicationName>workflow-ui-dev-${user.name}</deployApplicationName>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>ch.ivyteam.demo</groupId>
+      <artifactId>workflow-demos</artifactId>
+      <version>9.3.0-SNAPSHOT</version>
+      <type>iar</type>
+    </dependency>
+  </dependencies>
+
+  <repositories>
+    <repository>
+      <id>axonivy.public</id>
+      <url>http://repo.axonivy.rocks</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>thirdparty.libs</id>
+            <phase>process-resources</phase>
+            <goals>
+              <goal>copy-dependencies</goal>
+            </goals>
+            <configuration>
+              <outputDirectory>${project.build.directory}</outputDirectory>
+              <includeArtifactIds>workflow-demos</includeArtifactIds>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
         <executions>
