--- a/workflow-ui-test-data/pom.xml
+++ b/workflow-ui-test-data/pom.xml
@@ -23,4 +23,17 @@
       <type>iar</type>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
