--- a/workflow-ui/.classpath
+++ b/workflow-ui/.classpath
@@ -34,5 +34,5 @@
     </attributes>
   </classpathentry>
   <classpathentry kind="lib" path="lib/prettytime-3.2.7.Final.jar" />
-  <classpathentry kind="output" path="classes" />
+  <classpathentry kind="output" path="target/classes" />
 </classpath>
