--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -40,6 +40,9 @@
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
         <version>${flatten.plugin.version}</version>
+        <configuration>
+          <updatePomFile>true</updatePomFile>
+        </configuration>
         <executions>
           <execution>
             <id>flatten</id>
