--- a/maven/image-validation/pom.xml
+++ b/maven/image-validation/pom.xml
@@ -11,13 +11,13 @@
   <artifactId>workflow-ui-image-validation</artifactId>
 
   <properties>
-    <test.target.dir>${project.build.directory}/../../../workflow-ui-web-test/target/</test.target.dir>
+    <test.target.dir>${project.basedir}/../../workflow-ui-web-test/target/</test.target.dir>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
-      <artifactId>workflow-ui-web-test</artifactId>
+      <artifactId>workflow-ui-screenshots</artifactId>
       <version>${revision}</version>
       <type>zip</type>
     </dependency>
