--- a/maven/workflow-ui-screenshots/pom.xml
+++ b/maven/workflow-ui-screenshots/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ch.ivyteam.workflow</groupId>
-  <artifactId>workflow-ui-jar</artifactId>
+  <artifactId>workflow-ui-screenshots</artifactId>
   <version>${revision}</version>
   <packaging>pom</packaging>
 
@@ -28,8 +28,8 @@
         <version>3.1.0</version>
         <executions>
           <execution>
-            <id>jar</id>
-            <phase>package</phase>
+            <id>zip</id>
+            <phase>integration-test</phase>
             <goals>
               <goal>single</goal>
             </goals>
