--- a/maven/image-validation/pom.xml
+++ b/maven/image-validation/pom.xml
@@ -12,12 +12,13 @@
 
   <properties>
     <test.target.dir>${project.basedir}/../../workflow-ui-web-test/target/</test.target.dir>
+    <screenshotArtifactId>workflow-ui-screenshots</screenshotArtifactId>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
-      <artifactId>workflow-ui-screenshots</artifactId>
+      <artifactId>${screenshotArtifactId}</artifactId>
       <version>${revision}</version>
       <type>zip</type>
     </dependency>
@@ -37,7 +38,7 @@
               <goal>unpack-dependencies</goal>
             </goals>
             <configuration>
-              <includeArtifactIds>workflow-ui-web-test</includeArtifactIds>
+              <includeArtifactIds>${screenshotArtifactId}</includeArtifactIds>
               <outputDirectory>${project.build.directory}</outputDirectory>
               <overWriteSnapshots>true</overWriteSnapshots>
             </configuration>
