--- a/dev-workflow-ui-test/.project
+++ b/dev-workflow-ui-test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-  <name>workflow-ui-test</name>
+  <name>dev-workflow-ui-test</name>
   <comment></comment>
   <projects></projects>
   <buildSpec>
