--- a/dev-workflow-ui/pom.xml
+++ b/dev-workflow-ui/pom.xml
@@ -5,13 +5,13 @@
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
-    <artifactId>workflow-ui-config-iar</artifactId>
+    <artifactId>dev-workflow-ui-config-iar</artifactId>
     <version>${revision}</version>
     <relativePath>../maven/config/iar</relativePath>
   </parent>
 
   <groupId>ch.ivyteam.workflow</groupId>
-  <artifactId>workflow-ui</artifactId>
+  <artifactId>dev-workflow-ui</artifactId>
   <version>${revision}</version>
   <packaging>iar</packaging>
 
