--- a/maven/config/iar/pom.xml
+++ b/maven/config/iar/pom.xml
@@ -1,13 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.ivyteam.workflow</groupId>
-  <artifactId>workflow-ui-config-iar</artifactId>
+  <artifactId>dev-workflow-ui-config-iar</artifactId>
   <version>${revision}</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
-    <artifactId>workflow-ui-config</artifactId>
+    <artifactId>dev-workflow-ui-config</artifactId>
     <version>${revision}</version>
     <relativePath>..</relativePath>
   </parent>
