--- a/maven/config/test/pom.xml
+++ b/maven/config/test/pom.xml
@@ -3,12 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
-    <artifactId>workflow-ui-config</artifactId>
+    <artifactId>dev-workflow-ui-config</artifactId>
     <version>${revision}</version>
     <relativePath>..</relativePath>
   </parent>
 
-  <artifactId>workflow-ui-config-test</artifactId>
+  <artifactId>dev-workflow-ui-config-test</artifactId>
   <version>${revision}</version>
   <packaging>pom</packaging>
 
