--- a/maven/deploy/pom.xml
+++ b/maven/deploy/pom.xml
@@ -3,19 +3,19 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.ivyteam.workflow</groupId>
-  <artifactId>workflow-ui-deploy</artifactId>
+  <artifactId>dev-workflow-ui-deploy</artifactId>
   <version>${revision}</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
-    <artifactId>workflow-ui-config</artifactId>
+    <artifactId>dev-workflow-ui-config</artifactId>
     <version>${revision}</version>
     <relativePath>../config</relativePath>
   </parent>
 
   <properties>
-    <deployApplicationName>workflow-ui-dev-${user.name}</deployApplicationName>
+    <deployApplicationName>dev-workflow-ui-${user.name}</deployApplicationName>
   </properties>
 
   <dependencies>
