--- a/.editorconfig
+++ b/.editorconfig
@@ -3,10 +3,15 @@
 # top-most EditorConfig file
 root = true
 
-[*]
+[*.{java,md,css,xhtml,js}]
 end_of_line = lf
 indent_style = space
 indent_size = 2
 insert_final_newline = true
 trim_trailing_whitespace = true
 
+[{Jenkinsfile,pom.xml}]
+end_of_line = lf
+indent_style = space
+indent_size = 2
+insert_final_newline = true
