Replace revision with real version

--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -2,12 +2,11 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui-config</artifactId>
-  <version>${revision}</version>
+  <version>9.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <properties>
     <engine.page.url>https://jenkins.ivyteam.io/job/ivy-core_product/job/master/lastSuccessfulBuild/</engine.page.url>
-    <revision>9.4.0-SNAPSHOT</revision>
     <flatten.plugin.version>1.2.7</flatten.plugin.version>
     <project.build.plugin.version>9.4.0-SNAPSHOT</project.build.plugin.version>
     <buildPlugin.ivyVersion>[9.2.0,]</buildPlugin.ivyVersion>
