--- a/dev-workflow-ui-test/pom.xml
+++ b/dev-workflow-ui-test/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config-iar</artifactId>
-    <version>${revision}</version>
+    <version>9.4.0-SNAPSHOT</version>
     <relativePath>../maven/config/iar</relativePath>
   </parent>
 
@@ -18,7 +18,7 @@
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui</artifactId>
-      <version>${revision}</version>
+      <version>9.4.0-SNAPSHOT</version>
       <type>iar</type>
     </dependency>
     <dependency>
