--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config-test</artifactId>
-    <version>${revision}</version>
+    <version>9.4.0-SNAPSHOT</version>
     <relativePath>../maven/config/test</relativePath>
   </parent>
 
@@ -21,13 +21,13 @@
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui</artifactId>
-      <version>${revision}</version>
+      <version>9.4.0-SNAPSHOT</version>
       <type>iar</type>
     </dependency>
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>dev-workflow-ui-test-data</artifactId>
-      <version>${revision}</version>
+      <version>9.4.0-SNAPSHOT</version>
       <type>iar</type>
     </dependency>
     <dependency>
