--- a/dev-workflow-ui/pom.xml
+++ b/dev-workflow-ui/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config-iar</artifactId>
-    <version>${revision}</version>
+    <version>9.4.0-SNAPSHOT</version>
     <relativePath>../maven/config/iar</relativePath>
   </parent>
 
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui</artifactId>
-  <version>${revision}</version>
+  <version>9.4.0-SNAPSHOT</version>
   <packaging>iar</packaging>
 
   <build>
@@ -32,7 +32,7 @@
                 <fileset>
                   <directory>${basedir}/../maven/config/target/ivyEngine/webapps/ivy/WEB-INF/lib/</directory>
                   <includes>
-                    <include>dev-workflow-ui-jar-${revision}.jar</include>
+                    <include>dev-workflow-ui-jar-9.4.0-SNAPSHOT.jar</include>
                   </includes>
                 </fileset>
               </filesets>
