--- a/maven/config/iar/pom.xml
+++ b/maven/config/iar/pom.xml
@@ -2,13 +2,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>ch.ivyteam.workflow</groupId>
   <artifactId>dev-workflow-ui-config-iar</artifactId>
-  <version>${revision}</version>
+  <version>9.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>${revision}</version>
+    <version>9.4.0-SNAPSHOT</version>
     <relativePath>..</relativePath>
   </parent>
 
