--- a/maven/image-validation/pom.xml
+++ b/maven/image-validation/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>${revision}</version>
+    <version>9.4.0-SNAPSHOT</version>
     <relativePath>../config</relativePath>
   </parent>
 
@@ -19,7 +19,7 @@
     <dependency>
       <groupId>ch.ivyteam.workflow</groupId>
       <artifactId>${screenshotArtifactId}</artifactId>
-      <version>${revision}</version>
+      <version>9.4.0-SNAPSHOT</version>
       <type>zip</type>
     </dependency>
   </dependencies>
