--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
-    <version>${revision}</version>
+    <version>9.4.0-SNAPSHOT</version>
     <relativePath>maven/config</relativePath>
   </parent>
   <artifactId>dev-workflow-ui-module</artifactId>
