Raise project build plugin version to 9.4.1-SNASPHOT

--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -8,7 +8,7 @@
   <properties>
     <engine.page.url>https://jenkins.ivyteam.io/job/core_product/job/master/lastSuccessfulBuild/</engine.page.url>
     <flatten.plugin.version>1.2.7</flatten.plugin.version>
-    <project.build.plugin.version>9.4.0-SNAPSHOT</project.build.plugin.version>
+    <project.build.plugin.version>9.4.1-SNASPHOT</project.build.plugin.version>
     <buildPlugin.ivyVersion>[9.2.0,]</buildPlugin.ivyVersion>
     <engineHomeDirectory>${basedir}/../maven/config/target/ivyEngine/</engineHomeDirectory>
   </properties>
