--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>ch.ivyteam.workflow</groupId>
     <artifactId>dev-workflow-ui-config</artifactId>
     <version>9.4.0-SNAPSHOT</version>
     <relativePath>maven/config</relativePath>
   </parent>
+
+  <groupId>ch.ivyteam.workflow</groupId>
+  <version>9.4.0-SNAPSHOT</version>
   <artifactId>dev-workflow-ui-module</artifactId>
   <packaging>pom</packaging>
 
