--- a/maven/config/iar/pom.xml
+++ b/maven/config/iar/pom.xml
@@ -32,6 +32,13 @@
           </compilerOptions>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
