--- a/maven/config/pom.xml
+++ b/maven/config/pom.xml
@@ -101,6 +101,9 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-deploy-plugin</artifactId>
         <version>3.0.0</version>
+        <configuration>
+          <skip>true</skip>
+        </configuration>
       </plugin>
       </plugins>
     </pluginManagement>
