Dont build image-validation jar, set UTF-8

--- a/maven/image-validation/pom.xml
+++ b/maven/image-validation/pom.xml
@@ -13,6 +13,7 @@
   <properties>
     <test.target.dir>${project.basedir}/../../dev-workflow-ui-web-test/target/</test.target.dir>
     <screenshotArtifactId>dev-workflow-ui-screenshots</screenshotArtifactId>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencies>
@@ -91,6 +92,17 @@
         <configuration>
           <skip>false</skip>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.1.0</version>
+        <executions>
+          <execution>
+            <id>default-jar</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
