--- a/maven/config/iar/pom.xml
+++ b/maven/config/iar/pom.xml
@@ -13,7 +13,7 @@
   </parent>
 
   <properties>
-    <engine.page.url>https://jenkins.ivyteam.io/job/core_product/job/master/lastSuccessfulBuild/</engine.page.url>
+    <engine.page.url>https://product.ivyteam.io</engine.page.url>
   </properties>
 
   <build>
