only run download test

--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -184,7 +184,7 @@
             </goals>
             <configuration>
               <includes>
-                <include>**/WebTest*IT.java</include>
+                <include>**/WebTestDownload*IT.java</include>
               </includes>
               <reportNameSuffix>Integrated</reportNameSuffix>
               <argLine>
