--- a/dev-workflow-ui-web-test/pom.xml
+++ b/dev-workflow-ui-web-test/pom.xml
@@ -132,6 +132,22 @@
             </configuration>
           </execution>
           <execution>
+            <id>homepage-redirect-test</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <configuration>
+              <includes>
+                <include>**/WebTestHomeRedirect.java</include>
+              </includes>
+              <argLine>
+                -Dtest.engine.url=${test.engine.url}
+                -Dtest.engine.app=${test.application}
+                -Dtest.integrated.workflow=dev-workflow-ui</argLine>
+            </configuration>
+          </execution>
+          <execution>
             <id>selenium.web.docu</id>
             <phase>pre-integration-test</phase>
             <goals>
@@ -144,22 +160,6 @@
               <argLine>
                 -Dtest.engine.url=${test.engine.url}
                 -Dtest.engine.app=${test.application}</argLine>
-            </configuration>
-          </execution>
-          <execution>
-            <id>homepage-redirect-test</id>
-            <phase>integration-test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-            <configuration>
-              <includes>
-                <include>**/WebTestHomeRedirect.java</include>
-              </includes>
-              <argLine>
-                -Dtest.engine.url=${test.engine.url}
-                -Dtest.engine.app=${test.application}
-                -Dtest.integrated.workflow=dev-workflow-ui</argLine>
             </configuration>
           </execution>
           <execution>
