Remove flaky image from img-compare

--- a/maven/image-validation/pom.xml
+++ b/maven/image-validation/pom.xml
@@ -64,6 +64,9 @@
                 <includes>
                   <include>**/*.png</include>
                 </includes>
+                <excludes>
+                  <exclude>**/workflow-ui-caseDetails.png</exclude>
+                </excludes>
               </newImagesFs>
               <refImages>${project.build.directory}</refImages>
             </configuration>
