--- a/maven/deploy/pom.xml
+++ b/maven/deploy/pom.xml
@@ -20,6 +20,39 @@
     <deployApplicationName>dev-workflow-ui-${user.name}</deployApplicationName>
   </properties>
 
+  <profiles>
+    <profile>
+      <id>deploy-to-engine</id>
+      <build>
+        <plugins> 
+          <plugin>
+            <groupId>com.axonivy.ivy.ci</groupId>
+            <artifactId>project-build-plugin</artifactId>
+            <extensions>true</extensions>
+            <executions>
+              <execution>
+                <id>test.app.deploy</id>
+                <phase>install</phase>
+                <goals>
+                  <goal>deploy-to-engine</goal>
+                </goals>
+                <configuration>
+                  <skipDeploy>${skipDeployToEngine}</skipDeploy>
+                  <deployMethod>HTTP</deployMethod>
+                  <deployServerId>axonivy.engine</deployServerId>
+                  <deployEngineUrl>${deployToEngineUrl}</deployEngineUrl>
+                  <deployFile>${project.build.directory}/${project.artifactId}-${project.version}.zip</deployFile>
+                  <deployToEngineApplication>${deployApplicationName}</deployToEngineApplication>
+                  <deployTestUsers>true</deployTestUsers>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
+
   <build>
     <plugins>
       <plugin>
@@ -46,7 +79,7 @@
         <executions>
           <execution>
             <id>test.app.deploy</id>
-            <phase>deploy</phase>
+            <phase>site-deploy</phase>
             <goals>
               <goal>deploy-to-engine</goal>
             </goals>
